--- a/amal.html
+++ b/amal.html
@@ -3,6 +3,6 @@
 <title> welcome</title>
 </head>
 <body>
-<h1>This push is done using jenkins</h1>
+<h1>This push is done using jenkins....</h1>
 </body>
 </html>
